# neural-words

./: CMakeLists.txt  LICENSE  README.md
assets/: negative
include/: convert.hpp  genann.h  learn.hpp  read_words.hpp
src/: convert.cpp  genann.c  learn.cpp  main.cpp  read_words.cpp
